src/main/java/com/example/jallowbooks/errors/InternalServerErrorException.java
package com.example.jallowbooks.errors;

public class InternalServerErrorException extends RuntimeException{
    public InternalServerErrorException(String message){
        super(message);
    }
}
